--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -31,6 +31,25 @@
       <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
     </ng-container>
 
+    <!-- edit Column -->
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef> Edit </th>
+      <td mat-cell *matCellDef="let element">
+        <a  class="btn btn-outline-warning border-3">
+          <img src="../../../../../assets/edit.png" width="25px" height="25px">
+        </a>
+      </td>
+    </ng-container>
+        <!-- delete Column -->
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element">
+        <a class="btn btn-outline-danger border-3" appDelete [id]="element.id" (callback)="getProducts()">
+          <!-- <img src="../../../../../assets/delete.png" alt="" width="25px" height="25px" (click)="delete(element.id,$event)"> -->
+        </a>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
