--- a/src/app/admin/components/products/create/create.component.html
+++ b/src/app/admin/components/products/create/create.component.html
@@ -17,4 +17,4 @@
 <button mat-raised-button class="button" (click)="create(txtName,txtStock,txtPrice)">Create Product</button>
 
 
-<app-file-upload [options]="fileUploadOptions"></app-file-upload>
+<!-- <app-file-upload [options]="fileUploadOptions"></app-file-upload> -->
