--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -31,12 +31,23 @@
       <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
     </ng-container>
 
+    <!-- photos icon -->
+    <ng-container matColumnDef="photos">
+      <th mat-header-cell *matHeaderCellDef> Edit </th>
+      <td mat-cell *matCellDef="let element">
+        <a  class="btn btn-outline-warning border-3">
+          <img src="../../../../../assets/photos.png" width="25px" height="25px" style="cursor: pointer;"
+          (click)="addProductImages(element.id)">
+        </a>
+      </td>
+    </ng-container>
+
     <!-- edit Column -->
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
       <td mat-cell *matCellDef="let element">
         <a  class="btn btn-outline-warning border-3">
-          <img src="../../../../../assets/edit.png" width="25px" height="25px">
+          <img src="../../../../../assets/edit.png" width="25px" height="25px" style="cursor: pointer;">
         </a>
       </td>
     </ng-container>
