--- a/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
+++ b/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
@@ -1,17 +1,19 @@
 <h2 mat-dialog-title>Product Images</h2>
-<mat-dialog-content class="mat-typography">
-  <app-file-upload [options]="options"></app-file-upload>
-  <mat-card class="product-image-card" *ngFor="let image of images">
-    <mat-card-header>
-    </mat-card-header>
+<div mat-dialog-content class="mat-typography">
+
+  <!-- <app-file-upload [options]="options"></app-file-upload> -->
+  <app-file-upload [_options]=" options" ></app-file-upload>
+  <div mat-card class="product-image-card" *ngFor="let image of images">
+    <div mat-card-header>
+    </div>
     <img mat-card-image [src]="image.path">
-    <mat-card-content>
-    </mat-card-content>
-    <mat-card-actions>
+    <div mat-card-content>
+    </div>
+    <div mat-card-actions>
       <button mat-button style="background-color: darkgray; color: white;" (click)="deleteImage(image.id,$event)">Delete</button>
-    </mat-card-actions>
-  </mat-card>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
+    </div>
+  </div>
+</div>
+<div mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-</mat-dialog-actions>
+</div>
