--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   <div class="col-md-8">
     <!-- <app-footer></app-footer> -->
   </div>
-  <div class="col-md-2"></div>
+  <div class="col-md-2"></div>x
 </div>
 
 <ngx-spinner type="ball-clip-rotate-multiple" size="default" name="spinner1"></ngx-spinner>
