--- a/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
+++ b/src/app/dialogs/select-product-image-dialog/select-product-image-dialog.component.html
@@ -2,7 +2,8 @@
 <div mat-dialog-content class="mat-typography">
 
   <!-- <app-file-upload [options]="options"></app-file-upload> -->
-  <app-file-upload [_options]=" options" ></app-file-upload>
+  <!-- <file-upload [options]="options"></file-upload> -->
+  <!-- Bu daha sonradan eklenecek olan bir parcadir. -->
   <div mat-card class="product-image-card" *ngFor="let image of images">
     <div mat-card-header>
     </div>
