--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+  <div class="">
     <a class="navbar-brand" routerLink="">Mini E-Commerce</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -7,16 +7,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="">Ana Sayfa</a>
+          <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="">Ana Sayfa</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="products">Ürünler</a>
+          <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="products">Ürünler</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="basket">Sepet</a>
+          <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="basket">Sepet</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="register">Kayıt Ol</a>
+          <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="register">Kayıt Ol</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link  btn btn-outline-success" aria-current="page" routerLink="login">Giriş Yap</a>
         </li>
         <li>
           <a class="btn btn-outline-success" routerLink="/admin">Yönetim Paneli</a>
