--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -16,33 +16,21 @@
           <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="basket">Sepet</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="register">Kayıt Ol</a>
+          <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="register"
+          *ngIf="!authService.isAuthenticated">Kayıt Ol</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  btn btn-outline-success" aria-current="page" routerLink="login">Giriş Yap</a>
+          <a class="nav-link  btn btn-outline-success" aria-current="page" routerLink="login"
+          *ngIf="!authService.isAuthenticated">Giriş Yap</a>
         </li>
         <li>
-          <a class="btn btn-outline-success" routerLink="/admin">Yönetim Paneli</a>
+          <a class="btn btn-outline-danger"(click)="signOut()" style="cursor: pointer; color: red;" *ngIf="authService.isAuthenticated">Cıkış Yap</a>
           </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
+        <li>
+          <a class="btn btn-outline-success" routerLink="/admin"
+          *ngIf="authService.isAuthenticated">Yönetim Paneli</a>
+          </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
