--- a/src/app/admin/components/products/create/create.component.html
+++ b/src/app/admin/components/products/create/create.component.html
@@ -14,7 +14,7 @@
 </mat-form-field>
 
 
-<button mat-raised-button class="button" (click)="create(txtName,txtStock,txtPrice)">Create Product</button>
+<button  mat-raised-button class="button" (click)="create(txtName,txtStock,txtPrice)">Create Product</button>
 
 
-<!-- <app-file-upload [options]="fileUploadOptions"></app-file-upload> -->
+<file-upload [options]="fileUploadOptions"></file-upload>
