--- a/src/app/ui/components/register/register.component.html
+++ b/src/app/ui/components/register/register.component.html
@@ -22,14 +22,14 @@
           Lutfen Kullanıcı Adı Bölumünü Boş Geçmeyiniz!
         </small>
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="telephone">Telefon *</label>
         <input type="tel" formControlName="telephone" class="form-control" id="telephone" placeholder="Enter Telepthone Number"
         [ngClass]="{'is-invalid':submitted && component.telephone.errors}">
         <small  class="form-text text-muted invalid-feedback" *ngIf="submitted && component.telephone.errors?.required">
           Lutfen Telefon Numarası Bölümünü Boş Geçmeyiniz!
         </small>
-      </div>
+      </div> -->
       <div class="form-group">
         <label for="inputEmail">Email Address *</label>
         <input type="email"  formControlName="email" id="inputEmail" class="form-control" placeholder="Enter Email"
