--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row container">
   <div class="col-md-2"></div>
   <div class="col-md-8">
     <app-navbar></app-navbar>
@@ -7,11 +7,11 @@
   <div class="col-md-2"></div>
 </div>
 <div class="row">
-  <div class="col-md-2"></div>
-  <div class="col-md-8">
+  <div class="col-md-1"></div>
+  <div class="col-md-10">
     <router-outlet></router-outlet>
   </div>
-  <div class="col-md-2"></div>
+  <div class="col-md-1"></div>
 </div>
 <div class="row">
   <div class="col-md-2"></div>
