--- a/src/app/dialogs/delete-dialog/delete-dialog.component.html
+++ b/src/app/dialogs/delete-dialog/delete-dialog.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="close()">İptal</button>
-  <div mat-button mat-dialog-close cdkFocusInitial>Evet</div>
+  <button mat-button mat-dialog-close cdkFocusInitial>Evet</button>
 </div>
