--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -12,9 +12,9 @@
         <li class="nav-item">
           <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="products">Ürünler</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="basket">Sepet</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link btn btn-outline-success" aria-current="page" routerLink="register"
           *ngIf="!authService.isAuthenticated">Kayıt Ol</a>
@@ -30,7 +30,12 @@
           <a class="btn btn-outline-success" routerLink="/admin"
           *ngIf="authService.isAuthenticated">Yönetim Paneli</a>
           </li>
-      </ul>
-    </div>
+        </ul>
+        <div class="">
+          <button class=" btn btn-outline-success" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Sepet</button>
+        </div>
+      </div>
   </div>
 </nav>
+
+<app-baskets></app-baskets>
