--- a/src/app/ui/components/baskets/baskets.component.html
+++ b/src/app/ui/components/baskets/baskets.component.html
@@ -1,1 +1,42 @@
-<p>baskets works!</p>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl " role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Alışveriş Sepeti</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Ürün</th>
+                <th scope="col">Fiyat</th>
+                <th scope="col">Adet</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="{{basketItem.basketItemId}}" *ngFor="let basketItem of basketItems; let i=index">
+                <th scope="row">{{i+1}}</th>
+                <td>{{basketItem.name}}</td>
+                <td>{{basketItem.price}}</td>
+                <td>
+                  <input type="number" style="width: 4rem;" [value]="basketItem.quantity" data-id="{{basketItem.basketItemId}}" (change)="changeQuantity($event)">
+                </td>
+                <td>
+                  <button type="button" class="btn btn-danger" (click)="removeBasketItem(basketItem.basketItemId)">X</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Kapat</button>
+          <button type="button" class="btn btn-warning  ">Alışverişi Tamamla</button>
+        </div>
+      </div>
+    </div>
+  </div>
