--- a/src/app/ui/components/baskets/baskets.component.html
+++ b/src/app/ui/components/baskets/baskets.component.html
@@ -34,6 +34,6 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Kapat</button>
-          <button type="button" class="btn btn-warning  ">Alışverişi Tamamla</button>
+          <button type="button" class="btn btn-warning" (click)="shoppingComplete()">Alışverişi Tamamla</button>
         </div>
       </div>
