--- a/src/app/dialogs/basket-item-remove-dialog/basket-item-remove-dialog.component.html
+++ b/src/app/dialogs/basket-item-remove-dialog/basket-item-remove-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Dikkat!!</h1>
 <div mat-dialog-content>
-  <p>İlgili Ürünü Silmek İstediğinize Emin misiniz? </p>
+  <p>Sepetten Ürünü Silmek İstediğinize Emin misiniz? </p>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="close()">İptal</button>
