--- a/src/app/dialogs/basket-item-remove-dialog/basket-item-remove-dialog.component.html
+++ b/src/app/dialogs/basket-item-remove-dialog/basket-item-remove-dialog.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="close()">İptal</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Evet</button>
+  <!-- <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Evet</button> -->
 </div>
