--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -53,9 +53,11 @@
         <!-- delete Column -->
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
-      <td mat-cell *matCellDef="let element">
+      <!-- <td mat-cell *matCellDef="let element ">
         <a class="btn btn-outline-danger border-3" appDelete [id]="element.id" (callback)="getProducts()" controller="products">
         </a>
+      </td> -->
+      <td mat-cell *matCellDef="let element" appDelete [id]="element.id" (callback)="getProducts()" controller="products">
       </td>
     </ng-container>
 
