--- a/src/app/admin/components/orders/list/list.component.html
+++ b/src/app/admin/components/orders/list/list.component.html
@@ -25,13 +25,17 @@
         <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
       </ng-container>
   
+      <!-- Detail Column  -->
+      <ng-container matColumnDef="viewDetail">
+        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <td mat-cell *matCellDef="let element" width="30">
+            <img (click)="showDetail(element.id)" src="../../../../../assets/detail.png" width="25px" height="25px" style="cursor: pointer;">
+        </td>
+      </ng-container>
+
           <!-- delete Column -->
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef width="30"> Delete </th>
-        <!-- <td mat-cell *matCellDef="let element">
-          <a class="btn btn-outline-danger border-3" appDelete [id]="element.id" (callback)="getOrders()" controller="orders">
-          </a>
-        </td> -->
         <td mat-cell *matCellDef="let element"  appDelete [id]="element.id" (callback)="getOrders()" controller="orders">
         </td>
       </ng-container>
