--- a/src/app/dialogs/order-detail-dialog/order-detail-dialog.component.html
+++ b/src/app/dialogs/order-detail-dialog/order-detail-dialog.component.html
@@ -68,7 +68,7 @@
 </mat-dialog-content>
 <div mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Kapat</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="completeOrder()" *ngIf="!singleOrder.completed">
     Siparişi Tamamla
   </button>
 </div>
