--- a/src/app/admin/components/orders/list/list.component.html
+++ b/src/app/admin/components/orders/list/list.component.html
@@ -24,7 +24,13 @@
         <th mat-header-cell *matHeaderCellDef> Created Date </th>
         <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
       </ng-container>
-  
+      <!-- completed Column -->
+      <ng-container matColumnDef="completed">
+        <th mat-header-cell *matHeaderCellDef width="30"></th>
+        <td mat-cell *matCellDef="let element"> 
+          <img *ngIf="element.completed" src="../../../../../assets/completed.png" width="25px" height="25px" style="cursor: pointer;">
+        </td>
+      </ng-container>
       <!-- Detail Column  -->
       <ng-container matColumnDef="viewDetail">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
