--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -1,32 +1,9 @@
-<!-- <ul>
-  <li><a routerLink="/admin">Dashboard</a></li> -->
-  <!-- Buradaki en bastaki / isareti origin e akdar olan path i silmek ve devamında admin yazmak icindir.-->
-  <!-- <li><a routerLink="customers">Customers</a></li>
-  <li><a routerLink="products">Products</a></li>
-  <li><a routerLink="orders">Orders</a></li>
-  <li><a routerLink="">Siteyi Gör</a></li>
-</ul> -->
-
-
-
-
-<!-- angular material  -->
-
-
 <mat-list role="list">
-  <!-- <mat-list-item role="listitem"><a routerLink="/admin">Dashboard</a></mat-list-item>
-  <mat-list-item role="listitem"><a routerLink="customers">Customers</a></mat-list-item>
-  <mat-list-item role="listitem"><a routerLink="products">Products</a></mat-list-item>
-  <mat-list-item role="listitem"><a routerLink="orders">Orders</a></mat-list-item>
-  <mat-list-item role="listitem"><a routerLink="">Siteyi Gör</a></mat-list-item> -->
-
   <a mat-list-item role="listitem" routerLink="/admin">Dashboard</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="customers">Customers</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="products">Products</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="orders">Orders</a> <hr size="1px">
+  <a mat-list-item role="listitem" routerLink="authorize-menu">Authorize Menu</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="">Siteyi Gör</a><hr size="1px">
 
-  <!-- Yorum satirina alınan kullanım ile yukarıdaki kullanım arasında herhangi bir fark yoktur.
-  Sadece mat-list-item tag ini a tag ine donusturdum. a tag ini ise mat-list-item ile isaretledim. Olay bu kadar.
-  Hatta bu kullanım daha dogru bir kullanımdır.-->
 </mat-list>
