--- a/src/app/admin/components/products/create/create.component.html
+++ b/src/app/admin/components/products/create/create.component.html
@@ -1,20 +1,19 @@
-<mat-form-field class="product-create">
+<mat-form-field appearance="fill" class="product-create">
   <mat-label>Name</mat-label>
   <input matInput #txtName type="text">
 </mat-form-field>
 
-<mat-form-field class="product-create">
+<mat-form-field appearance="fill" class="product-create">
   <mat-label>Stock</mat-label>
   <input matInput type="number" min="0" value="0" #txtStock>
 </mat-form-field>
 
-<mat-form-field class="product-create">
+<mat-form-field appearance="fill" class="product-create">
   <mat-label>Price</mat-label>
   <input matInput type="number" min="0" value="0" #txtPrice>
 </mat-form-field>
 
 
-<button  mat-raised-button class="button" (click)="create(txtName,txtStock,txtPrice)">Create Product</button>
+<button  mat-raised-button class="button" color="primary" (click)="create(txtName,txtStock,txtPrice)">Create Product</button>
 
-
-<file-upload [options]="fileUploadOptions"></file-upload>
+<!-- <file-upload [options]="fileUploadOptions"></file-upload> -->
