--- a/src/app/admin/layout/components/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/components/sidebar/sidebar.component.html
@@ -4,6 +4,7 @@
   <a mat-list-item role="listitem" routerLink="products">Products</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="orders">Orders</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="authorize-menu">Authorize Menu</a> <hr size="1px">
+  <a mat-list-item role="listitem" routerLink="roles">Roles</a> <hr size="1px">
   <a mat-list-item role="listitem" routerLink="">Siteyi Gör</a><hr size="1px">
 
 </mat-list>
