--- a/src/app/dialogs/order-detail-dialog/order-detail-dialog.component.html
+++ b/src/app/dialogs/order-detail-dialog/order-detail-dialog.component.html
@@ -6,7 +6,7 @@
     <span> Sipariş No : {{singleOrder.orderCode}}</span>
   </mat-toolbar>
   <table
-    mat-table
+    mat-table 
     [dataSource]="dataSource"
     class="mat-elevation-z8 order-detail-table"
   >
@@ -19,7 +19,8 @@
     <!-- Price Column -->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">{{ element.price |currency:'₺' }}</td>
+      <!-- <td mat-cell *matCellDef="let element">{{ element.price |currency:'₺' }}</td> -->
+      <td mat-cell *matCellDef="let element">{{ element.price}}</td>
     </ng-container>
 
     <!-- Quantity Column -->
@@ -31,7 +32,8 @@
     <!-- Total Price Column -->  
     <ng-container matColumnDef="totalPrice">
       <th mat-header-cell *matHeaderCellDef>Total Price</th>
-      <td mat-cell *matCellDef="let element" style="color: red;">{{ element.price*element.quantity | currency:'₺'}}</td>
+      <!-- <td mat-cell *matCellDef="let element" style="color: red;">{{ element.price*element.quantity | currency:'₺'}}</td> -->
+      <td mat-cell *matCellDef="let element" style="color: red;">{{ element.price*element.quantity}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -52,7 +54,8 @@
     </thead>
     <tbody>
       <tr>
-        <td style="text-align: right; color: red; font-size: 20px;">{{totalPrice | currency:'₺'}}</td>
+        <!-- <td style="text-align: right; color: red; font-size: 20px;">{{totalPrice | currency:'₺'}}</td> -->
+        <td style="text-align: right; color: red; font-size: 20px;">{{totalPrice}}</td>
       </tr>
       <tr>
         <td style="text-align: right; font-size: 12px;"><strong>Address:{{singleOrder.address}}</strong></td>
@@ -68,7 +71,8 @@
 </mat-dialog-content>
 <div mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Kapat</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="completeOrder()" *ngIf="!singleOrder.completed">
+  <!-- <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="completeOrder()" *ngIf="!singleOrder.completed"> -->
+      <button mat-button mat-dialog-close="data" cdkFocusInitial (click)="completeOrder()" *ngIf="!singleOrder.completed">
     Siparişi Tamamla
   </button>
 </div>
