--- a/src/app/dialogs/shopping-complete-dialog/shopping-complete-dialog.component.html
+++ b/src/app/dialogs/shopping-complete-dialog/shopping-complete-dialog.component.html
@@ -4,6 +4,7 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="close()">İptal</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="complete()">Evet</button>
+  <!-- <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="complete()">Evet</button> -->
+  <button mat-button mat-dialog-close="data" cdkFocusInitial (click)="complete()">Evet</button>
   <!-- --------------- -->
 </div>
