--- a/src/app/dialogs/authorize-menu-dialog/authorize-menu-dialog.component.html
+++ b/src/app/dialogs/authorize-menu-dialog/authorize-menu-dialog.component.html
@@ -1,10 +1,12 @@
-<h1 mat-dialog-title>{{data.name}} Endpoint'ine Rol Atama</h1>
+<h1 mat-dialog-title matBadge="{{rolesComponent.selectedOptions.selected.length}}/{{roles.totalCount}}" matBadgeOverlap="false">{{data.name}} Endpoint'ine Rol Atama</h1>
 <div mat-dialog-content>
   <p>Ilgili Sayfaya Aşağıdan Rolleri Atayabilirsiniz...</p>
 </div>
-<div matBadge="4" matBadgeOverlap="false"></div>
+<mat-selection-list #rolesComponent>
+    <mat-list-option *ngFor="let role of listRoles" selected="{{role.selected}}">{{role.name}}</mat-list-option>
+</mat-selection-list>
 <div mat-dialog-actions>
   <button mat-button (click)="close()">İptal</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Evet</button>
+  <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="asssignRoles(rolesComponent)">Rolleri Ata</button>
   <!-- --------------- -->
 </div>
