--- a/src/app/dialogs/complete-order-dialog/complete-order-dialog.component.html
+++ b/src/app/dialogs/complete-order-dialog/complete-order-dialog.component.html
@@ -5,5 +5,6 @@
 <div mat-dialog-actions>
   <button mat-button (click)="close()">İptal</button>
   <button mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="complete()">Evet</button>
+  <!-- <mat-button [mat-dialog-close]="data" cdkFocusInitial (click)="complete()">Evet</mat-button> -->
   <!-- --------------- -->
 </div>
