--- a/src/app/admin/components/products/products.component.html
+++ b/src/app/admin/components/products/products.component.html
@@ -1,3 +1,5 @@
+<button  mat-raised-button class="button" color="primary" style="margin: 15px;" (click)="showProductQRCodeReading()">Product QRCode Reading</button>
+
 <mat-drawer-container class="product-create">
   <mat-drawer mode="side" opened>
     <app-create (createdProduct)="createdProduct($event)"></app-create>
